fix spaces + margin issue on mobile

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -2235,7 +2235,6 @@ p.author a {
 	background-image: url(../images/dark-grey-tile.png);
 	color: #fff;
 	text-align: center;
-	margin: -20px -25px 15px;
 	padding: 20px;
 }
 
